--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "autoprefixer": "^10",
+    "axios": "^1.1.3",
     "core-js": "^3.8.3",
     "postcss": "^8",
     "roboto-fontface": "*",
